[package]
name = "sma_oracle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sma_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
pyth-sdk-solana = "0.9.0"

[profile.release]
overflow-checks = true  # Enable for security against overflows
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3